fix left main menu jumping words

--- a/wp-content/themes/mensafin/style.css
+++ b/wp-content/themes/mensafin/style.css
@@ -170,13 +170,13 @@ ul#menu-mainmensamenu li li {
 
 .link a:hover, ul#menu-mainmensamenu a[href]:hover {
 	color: #06C; 
-	font-weight: bolder;
+	font-weight: bold;
 	letter-spacing: 0.00em;
 }
 
 .link a:active, ul#menu-mainmensamenu a:active {
 	color: #06C;
-	font-weight: bolder;
+	font-weight: bold;
 	letter-spacing: 0.00em;
 }
 
